Fix spacing of social icons in footer

--- a/debugist/static/css/style.css
+++ b/debugist/static/css/style.css
@@ -25,3 +25,7 @@ main {
 .footer-slogan {
     font-weight: bold;
 }
+
+.social-icon {
+    margin-top: 15px;
+}
